spec/fixtures/valid_rails_app/config/initializers/session_store.rb
# Be sure to restart your server when you modify this file.

Valid::Application.config.session_store :cookie_store, key: '_valid_session'
