spec/fixtures/invalid_rails_app/config/initializers/session_store.rb
# Be sure to restart your server when you modify this file.

Invalid::Application.config.session_store :cookie_store, key: '_invalid_session'
